# automated_capability_evaluation

./: .gitignore  .pre-commit-config.yaml  =4.5  CODE_OF_CONDUCT.md  README.md  REPO_CLEANUP_DECISIONS_2026-03-09.md  VECTOR_INFERENCE_GUIDE.md  check_vecinf_models.sh  create_batches.py  local_multi_agent_r0_log.txt  local_multi_agent_r1_log.txt  manage_tasks.py  multi_agent_claude_r0_log.txt  multi_agent_claude_r1_log.txt  multi_agent_gemini3_r0_log.txt  multi_agent_gemini3_r1_log.txt  multi_agent_gemini_r0_log.txt  multi_agent_gemini_r1_log.txt  multi_agent_gpt4o_r0_log.txt  multi_agent_gpt4o_r1_log.txt  multi_agent_gpt5_r0_log.txt  multi_agent_gpt5_r1_log.txt  multi_agent_local_log.txt  multi_agent_log.txt  multi_agent_r0_strat_log.txt  multi_agent_r1_strat_log.txt  pyproject.toml  recap_gpt51_log.txt  recap_gpt51_v2_log.txt  recap_gpt51_v3_log.txt  recap_gpt51_v4_log.txt  recap_gpt51_v5_log.txt  recap_gpt51_v6_1worker_log.txt  recap_gpt51_v6_2worker_log.txt  recap_gpt51_v7_2worker_log.txt  recap_gpt51_v7_2worker_rerun_log.txt  recap_gpt51_v7_3worker_log.txt  recap_gpt51_v7_3worker_rerun_log.txt  recap_gpt51_v8_2worker_log.txt  recap_gpt51_v8_3worker_log.txt  (+10 more)
.github/workflows/: code_checks.yml  docs_build.yml  docs_deploy.yml  integration_tests.yml  publish.yml
IRT/: README.md  __init__.py  irt_analysis.py  load_scores.py  main.py
IRT/cfg/: irt_config.yaml
example_scripts/: README.md  __init__.py  clean.py  compare_seed_capability_results.py  no_discovery_capability_embeddings.py  plot_lbo_results.py  plot_lbo_spider.py  plot_llm_capability_scores.py  train_test_embedding_visualization.py  visualize_embeddings.py
example_scripts/example_cfg/: capability_score_visualization.yaml  capability_scores_cfg.yaml  compare_seed_capability_results_cfg.yaml  plot_lbo_results_cfg.yaml  plot_lbo_spider_cfg.yaml  train_test_embedding_visualization_cfg.yaml  visualization_cfg.yaml
exp_scripts/: compare_seed_capability_results.py
experimental/: diverse_task_config.yaml  diverse_task_dataclasses.py  diverse_task_generator.py  diverse_task_prompts.py  extract_subtopics.py  find_combinations.py  generate_blueprints.py  generate_tasks.py  model_utils.py  verify_tasks.py
legacy/: README.md
legacy/example_scripts/: plot_lbo_results.py
legacy/pre_schema_pipeline/: README.md
legacy/src/: __init__.py  capability.py  lbo.py  model.py  run_lbo.py
legacy/utils/: __init__.py  legacy_capability_management_utils.py  legacy_constants.py  legacy_data_utils.py  legacy_embedding_utils.py  legacy_embedding_visualization_utils.py  legacy_visualization_utils.py
scripts/: classify_tasks.py  flatten_inspect_logs.py  generate_task_dataset.sh
scripts/static_benchmarks/: bizbench_eval.sh  bizbench_local_array_eval.sh  classify_static_benchmark_topics_vllm.py  env_slurm_inspect.sh  finance_book1_book2_local_array_eval.sh  finance_book3_book4_local_array_eval.sh  finance_book5_book6_local_array_eval.sh  finance_math_eval.sh  finance_math_local_array_eval.sh  finance_tasks_eval.sh  hardmath_eval.sh  harp_eval.sh  math500_eval.sh  minif2f_eval.sh  omni_math_eval.sh  orca_math_eval.sh  proofnet_eval.sh  run_topic_classification_qwen3_32b.sh  seed_tasks_allbloom_eval.sh  seed_tasks_no_create_eval.sh  stateval_eval.sh  submit_all_static_benchmarks.sh  wemath_eval.sh  xfinbench_test_eval.sh  xfinbench_test_local_array_eval.sh
src/: __init__.py  agentic_area_generator.py  agentic_capability_generation.py  agentic_capability_generator.py  agentic_task_generator.py  agentic_task_solver.py  area_generator.py  capability.py  compare_seed_capability_results.py  create_seed_capabilities.py  create_seed_tasks.py  dimensionality_reduction.py  generate_capabilities.py  generate_diverse_tasks.py  generate_embeddings.py  generate_initial_capabilities.py  generate_tasks.py  get_seed_capability_results.py  get_seed_task_results.py  lbo.py  lbo_area.py  model.py  requirements.txt  run.py  run_base_pipeline.py  run_capability_generation.py  run_embedding_eval.py  run_eval_pipeline.py  run_evaluation.py  run_experiments.py  run_generation_pipeline.py  run_irt_analysis.py  run_lbo.py  run_lbo_area.py  run_quality_evaluation.py  run_quality_evaluation_README.md  task.py
src/area_generation/: __init__.py  models.py  (+4 more)
tests/: __init__.py  test_data_utils.py  test_model_class.py  test_task_class.py
wikipedia/: model.py  prompts.py  static_vs_generated.py  wiki_vs_generated.py  wikipedia_scraper.py
(+537 files in other folders)
